2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added web-seeding URI handling in addTorrent command.
	* src/XmlRpcMethodImpl.cc

2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added "length" key to getFiles response.
	* src/XmlRpcMethodImpl.cc

2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Moved --no-netrc option from ftp option section to http/ftp option
	section.
	* doc/aria2c.1.txt
	* src/OptionHandlerFactory.cc
	
2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed garbage "\" character before '
	* doc/aria2c.1.txt

2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed garbage "\" character before http.
	* doc/aria2c.1.txt

2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented additional options that can be specified in -i list.
	Documented --enable-xml-rpc, --xml-rpc-listen-port, --xml-rpc-user
	and --xml-rpc-passwd. Removed --enable-http-server and
	--http-server-listen-port.
	* doc/aria2c.1.txt

2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added "downloadSpeed" and uploadSpeed" key in getPeers response.	
	* src/DefaultPeerStorage.cc
	* src/DefaultPeerStorage.h
	* src/PeerStorage.h
	* src/XmlRpcMethodImpl.cc
	* test/MockPeerStorage.h

2009-05-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Put a call to Socket::isReadable() in try block.
	* src/HttpServerBodyCommand.cc
	* src/HttpServerCommand.cc

2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed segmentation fault error. SocketBuffer::sendResponse() may throw
	exception , so it is now in try block.
	* src/HttpServerResponseCommand.cc

2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added "amChoking" and "peerChoking" key in getPeers response.
	* src/XmlRpcMethodImpl.cc

2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added test case for zero-length filter.